<resources>
    <string name="app_name">SearchUserGithub</string>
    <string name="msg_no_network_available">No network available, try again !</string>
    <string name="error_field_required">This field is required !!!</string>
    <string name="error_limit_result">Result limit in [1,100]</string>
    <string name="search">Search</string>
    <string name="limit">Limit</string>
    <string name="git_search">Git Search</string>
    <string name="keyword">Keyword</string>
    <string name="task_room_manager">Task Room Manager</string>
</resources>
